# sparv-pipeline

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  MIT.license  Makefile  README.md  README.txt  SB_README.txt  Snakefile  Snakefile-new  changelog.md  config.snake  config_default.yaml  distribute.sh  pipeline_commands.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run-tests.py  setup.py
.github/workflows/: ci.yml
config/: config_default.yaml
config/presets/: FREELING.yaml  FREELING_FULL.yaml  PARAGRAPH_SWE.yaml  PHRASE_STRUCTURE.yaml  STANFORD.yaml  SWE_DEFAULT.yaml  TREETAGGER.yaml  datetime.yaml  freeling.yaml  freeling_full.yaml  paragraph.yaml  readability.yaml  stanford.yaml  swe_default.yaml  treetagger.yaml
docs/: README.md  changelog.md  developers_guide.md  documentation.md  mkdocs.yml  set_version.sh  sync_doc.sh  user_manual.md
docs/developers-guide/: classes.md  config-parameters.md  config.md  general-concepts.md  misc.md  module-function-types.md  sparv-classes.md  sparv-decorators.md  util-functions.md  utilities.md  wildcards.md  writing-plugins.md  writing-sparv-modules.md  writing-sparv-plugins.md
docs/docsify/: _coverpage.md  _sidebar.md  index.html  set_version.sh  sparv-pipeline.md  sync_doc.sh
docs/md2pdf/: .gitignore  filter.py  make_pdf.sh  settings_template.tex  template.tex
docs/mkdocs/: developers-guide  index.md  user-manual
docs/mkdocs/overrides/: home.html
docs/mkdocs/stylesheets/: extra.css
docs/user-manual/: available-analyses.md  corpus-configuration.md  installation-and-setup.md  intro.md  misc.md  quick-start.md  requirements-for-input-data.md  requirements-for-source-files.md  running-sparv.md
makefiles/: Makefile.common  Makefile.config  Makefile.config_default  Makefile.example  Makefile.example_SB  Makefile.langs  Makefile.multi  Makefile.rules  Makefile.template
models/: Makefile  bettertokenizer.sv  cstlemma-train.sh  cstlemma.README  dalin.README  diapivot.README  hunpos.README  hunpos.parole.morphtable  hunpos.suc.morphtable  hunpos.suc.patterns  hunpos.suc3.suc-tags.default-setting.utf8.model  nst.comp.pos.README  nst.comp.pos.pickle  punkt-nltk-svenska.pickle  punkt.README  saldo.README  stats.README  suc.README  suc3.morphtable.words  swedberg.README  swemalt.README
models/cst/: cstlemma-train.sh  cstlemma.README  suc.README
models/geo/: build.sh
models/glossa/: #export#htdocs_sb#glossa#js#MASTER.js  #export#res#lb#glossa#dat#MASTER#cgi.conf
models/hist/: dalin.README  diapivot.README  fsv_sentseg.model  fsvm.README  fsvm.pickle
models/hist_hunposfiles/: README
models/hunpos/: build.sh  hunpos.README
models/hunpos/hist/: README
models/hunpos/hist_hunposfiles/: swedberg-gender.hunpos
models/lexical_classes/: blingbring.freq.gp2008+suc3+romi.pickle  build.sh  roget_hierarchy.xml  swefn.freq.gp2008+suc3+romi.pickle
models/malt/: swemalt.README
models/saldo/: nst.comp.pos.README  nst.comp.pos.pickle  stats.README
models/segment/: bettertokenizer.sv  punkt.README
models/sensaldo/: build.sh
models/wsd/: build.sh
python/: Makefile
python/sb/: __init__.py  align.py  annotate.py  catalaunch.c  catapult.py  compound.py  compound_simple.py  crf.py  cwb.py  dateformat.py  diapivot.py  fileid.py  flat_txt2crf.py  fsv.py  geo.py  glossa.py  hist.py  hunpos.py  hunpos_morphtable.py  hunpos_morphtable_hist.py  info.py  install.py  json2standoff.py  lemgram_index.py  lemgrampos.py  lexical_classes.py  lmflexicon.py  malt.py  memsaldo.py  number.py  parent.py  phrase_structure.py  pipeline.py  readability.py  relations.py  saldo.py  segment.py  sent_align.py  sentiment.py  snowball.py  (+14 more)
python/sb/old/: align.py  glossa.py  (+1 more)
python/test/: catapult_test.sh  membrane_example.py  membrane_test.sh  silly.py
snakefiles/: compound.snake  cwb.snake  dateformat.snake  defaults.snake  geo.snake  hunpos.snake  lexical_classes.snake  malt.snake  number.snake  parse_xml.snake  readability.snake  saldo.snake  segment.snake  segment_paragraphs.snake  sentiment.snake  swener.snake  utils.snake  wsd.snake  xmlparser.snake
sparv/: __init__.py  __main__.py  annotate.py  compound.py  compound_simple.py  cwb.py  dateformat.py  diapivot.py  geo.py  hist.py  hunpos.py  hunpos_morphtable.py  hunpos_morphtable_hist.py  info.py  install.py  lemgram_index.py  lexical_classes.py  malt.py  number.py  parent.py  readability.py  relations.py  saldo.py  segment.py  sentiment.py  suc2hunpos.py  swener.py  timespan.py  train_nst_comp_model.py  train_stats_model.py  vw.py  word_align.py  wsd.py  xmlparser.py
sparv/api/: __init__.py  classes.py
sparv/core/: Snakefile  config.py  console.py  io.py  language_registry.py  log.py  log_handler.py  misc.py  paths.py  plugins.py  preload.py  progressbar.py  registry.py  run.py  run_snake.py  schema.py  setup.py  snake_prints.py  snake_utils.py  wizard.py
sparv/legacy/: README.md  compound_simple.py  crf.py  phrase_structure.py  vw.py  vw_topic_modelling.py  xmlanalyzer.py
sparv/util/: __init__.py  classes.py  constants.py  corpus.py  export.py  flat_txt2crf.py  install.py  lmflexicon.py  log.py  misc.py  model.py  msd_to_pos.py  mysql_wrapper.py  parent.py  pos_to_upos.py  run.py  system.py  tagsets.py  teidata.py  unicode_convert.py
test_corpora/corpus_en/: config.yaml
test_corpora/freeling_corpus/: config.yaml
test_corpora/korpus1/: config.yaml
test_corpora/standard_corpus/: config.yaml  convert.py
test_corpora/stanford_corpus/: config.yaml
test_corpora/treetagger_corpus/: config.yaml
testkorpus/: .gitignore  Snakefile  config.yaml
tests/: build_example_corpora.sh  test_annotations.py  utils.py
tests/check_revisions/: goal_stdout  test.yaml
tests/compound_wsd/: Makefile
tests/export/: Makefile  test.yaml
tests/gerlof_minikorpus/: Makefile
tests/readability/: Makefile  goal_summary  test.yaml
tests/simple/: Makefile  goal_stdout  test.yaml
tests/test_corpora/: .gitignore
tests/unit/: test_language_registry.py
tests/vw/: Makefile  test.yaml
tests/vw-namn/: test.yaml
utils/: freq_list.py
(+729 files in other folders)
