[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparv-pipeline"
dynamic = ["version"]
description = "Språkbanken's text analysis tool"
readme = "README.md"
requires-python = ">=3.8"
license.text = "MIT License"
authors = [
    { name = "Språkbanken", email = "sb-info@svenska.gu.se" }
]
dependencies = [
    "appdirs==1.4.4",
    "argcomplete==3.2.3",
    "docx2python==1.27.1",
    "importlib-metadata==6.8.0", # For Python <3.10 compatibility
    "jsonschema==4.20.0",
    "nltk==3.8.1",
    "packaging>=21.0",
    "pdfplumber==0.10.3",
    "protobuf>=3.19.0,<4.0.0",   # Used by Stanza; see https://github.com/spraakbanken/sparv-pipeline/issues/161
    "pycountry==22.3.5",
    "python-dateutil==2.8.2",
    "python-json-logger==2.0.7",
    "PyYAML==6.0.1",
    "questionary==1.10.0",
    "rich==13.7.0",
    "snakemake==7.32.3",
    "stanza==1.5.1",
    "torch>=1.9.1",              # Used by Stanza; see https://github.com/spraakbanken/sparv-pipeline/issues/82
    "typing-inspect==0.9.0",
]

[project.optional-dependencies]
dev = [
    "pandocfilters==1.5.0",
    "pytest>=6.0.0",
    "pytest-sugar>=0.9.6",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/spraakbanken/sparv-pipeline/"
Documentation = "https://spraakbanken.gu.se/sparv/"

[project.scripts]
sparv = "sparv.__main__:main"

[tool.hatch]
version.path = "sparv/__init__.py"
build.include = ["/sparv"]
publish.index.disable = true       # Require confirmation to publish

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "ANN",    # flake8-annotations
    "ARG",    # flake8-unused-arguments
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "COM",    # flake8-commas
    "D",      # pydocstyle
    "D400",   # pydocstyle: ends-in-period
    "D401",   # pydocstyle: non-imperative-mood
    "E",      # pycodestyle: errors
    "F",      # Pyflakes
    "FLY",    # flynt
    "FURB",   # refurb
    "G",      # flake8-logging-format
    "I",      # isort
    "ISC",    # flake8-implicit-str-concat
    "N",      # pep8-naming
    "PERF",   # Perflint
    "PIE",    # flake8-pie
    "PL",     # Pylint
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "W",      # pycodestyle: warnings
]
ignore = [
    "ANN101", # flake8-annotations: missing-type-self (deprecated)
    "ANN102", # flake8-annotations: missing-type-cls (deprecated)
    "ANN401", # flake8-annotations: any-type
    "B008",   # flake8-bugbear: function-call-in-default-argument
    "COM812", # flake8-commas: missing-trailing-comma
    "PLR09",  # Pylint: too-many-*
    "SIM105", # flake8-simplify: suppressible-exception
]
preview = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-s -v --tb=no"
testpaths = ["tests"]
markers = [
    "slow: tests that potentially take a long time to complete",
    "swe: tests for Swedish corpora",
    "swehist: tests for corpora with historical Swedish",
    "treetagger: tests for Treetagger corpora",
    "freeling: tests for FreeLing corpora",
    "stanford: tests for Stanford Parser corpora",
    "noexternal: tests that don't rely on external tools",
    "unit: unit tests",
]
